fix solutions title wrapping on laptop

--- a/app/globals.css
+++ b/app/globals.css
@@ -287,7 +287,7 @@ body {
 	}
 
 	.solutions-heading {
-		width: 770px !important;
+		width: 960px !important;
 	}
 
 	.solutions-description {
